--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "type": "git",
     "url": "https://github.com/leso-kn/aesh"
   },
+  "keywords": [
+    "ipfs",
+    "aes-256",
+    "file-sharing",
+    "qrcode",
+    "archiving"
+  ],
   "author": "Lesosoftware",
   "license": "MIT",
   "dependencies": {
