--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Encrypt and share files through IPFS via QR codes or NFC tags.",
   "main": "aesh.js",
   "bin": {
-    "ipfs-seqr": "./aesh.js"
+    "aesh": "./aesh.js"
   },
   "repository": {
     "type": "git",
